// micro-one/proto/subscriptions.proto
syntax = "proto3";

package endpoint; 

service EndpointService {
  rpc Create(Endpoint) returns (EndpointsResponse) {}
  rpc Read(EndpointID) returns (EndpointsResponse) {}
  rpc Update(Endpoint) returns (EndpointsResponse) {}
  rpc Delete(EndpointID) returns (Response) {}
  rpc List(UserID) returns (EndpointsListResponse) {}
  rpc Trigger(EndpointID) returns (Response) {}
  rpc Start(EndpointID) returns (Response) {}
  rpc Stop(EndpointID) returns (Response) {}
  rpc Data(Key) returns (Body) {}
}

message Endpoint {
  int64 ID = 1;
  string method = 2;
  string url = 3;
  string header = 4;
  string body = 5;
  int64 user = 6;
  int64 min_interval = 7;
  int64 max_interval = 8;
}

message EndpointsListResponse {
  Response response = 1;
  repeated Endpoint list = 2;
}

message EndpointsResponse {
  Response response = 1;
  Endpoint endpoint = 2;
}

message Response {
  bool ok = 1;
  string error = 2;
}

message EndpointID {
  int64 id = 1;
}

message UserID {
  int64 id = 1;
}

message Key {
  int64 key = 1;
}

message EndpointURL {
  string url = 1;
}

message Body {
  string created = 1;
  bytes data = 2;
}

message DataEvent {
  int64 user = 1;
  int64 key = 2;
  string url = 3;
}